--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "join",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
+    "electron": "electron .",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -27,6 +29,8 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "electron": "^25.5.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
