--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jasmine": "~4.3.0",
     "electron": "^25.5.0",
     "electron-reload": "^2.0.0-alpha.1",
+    "electron-reloader": "^1.2.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
